[package]
name = "loadtxt"
version = "0.1.0"
authors = ["Ben Kimock <kimockb@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
num_cpus = "1.10"
scoped_threadpool = "0.1.9"
lexical = "4.0"
memmap = "0.7"

[build-dependencies]
cbindgen = {version = "0.9", default-features = false}

[lib]
crate-type = ["cdylib"]
