[package]
name = "loadtxt"
version = "0.1.0"
authors = ["Ben Kimock <kimockb@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
num_cpus = "1.0"
scoped_threadpool = "0.1.9"
lexical-core = {version = "0.7", default-features = false, features = ["correct", "std"]}
memmap = "0.7"
lazy_static = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = 1
